--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Sam's First Project</title>
+  <link rel="stylesheet" href="styles.css"></link>
 </head>
 <body>
   <button onclick="hello()">CLICK ME</button>
 </body>
+<script src="app.js"></script>
 </html>
