--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <button onclick="hello()">CLICK ME</button>
+  <img src="https://userscontent2.emaze.com/images/630bb749-bc10-47f8-b307-a4af0ece00cd/e41fd182175ab9618323812d40c53a5f.jpg"></body>
 </body>
 <script src="app.js"></script>
 </html>
